--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -2,30 +2,30 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a & */
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
   --primary-color: #1B6DB6   ;
   --secondary-color: #122145 ;
   --accent1-color: #DB8E1F;
-  --accent2-color:#3DBDE9;
-  --accent3-color: #FFFFFF;  
+  --accent2-color:#3DBDE9; 
+  --accent3-color: #e0e6e5;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Cormorant Garamond";
-  --paragraph-font: Roboto, Helvetica, sans-serif;
+  --paragraph-font: "Playfair Display", "Times New Roman", serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #122145;  /* headlines on a white background */ 
+  --headline-color-on-white: black;  /* headlines on a white background */ 
   --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #122145; /* paragraph text on a white background */ 
+  --paragraph-color-on-white: black; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
+  --paragraph-background-color: #1B6DB6;
+  --nav-link-color: #1B6DB6;
+  --nav-background-color: #e0e6e5;
   --nav-hover-link-color: white;
-  --nav-hover-background-color: #396E94;
+  --nav-hover-background-color: #1B6DB6;
 }
 
 
@@ -93,6 +93,9 @@ p {
 }
 .accent2{
   background-color: var(--accent2-color);
+}
+.accent3 {
+  background-color: var(--accent3-color);;
 }
 p.colored {
   background-color: var(--paragraph-background-color);
