--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -8,9 +8,9 @@ Fonts are separated by a & */
   /* change the values below to your colors from your palette */
   --primary-color: #1B6DB6   ;
   --secondary-color: #122145 ;
-  --accent1-color: #DB8E1F;
+  --accent1-color: #D2B48C;
   --accent2-color:#3DBDE9; 
-  --accent3-color: #e0e6e5;
+  --accent3-color: white;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Cormorant Garamond";
