--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+
+.home-title {
+    font-family: "Cormorant Garamond", georgia, serif;
+    font-size: 2em;
+    margin-top: 10px;
+}
+
 #content {
     max-width: 1600px;
     margin: 0 auto;
@@ -7,49 +15,62 @@ nav, a, #hero-msg, h1, #hero-msg, h4, .button-box, main, section{
     text-align: center;
 }
 
+#background {
+    height: 725px;
+}
+
+body{
+    background-color: white;
+    font-family: "Playfair Display", "Times New Roman", serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+}
+main section img {
+    box-sizing: border-box;
+}
+
+header {
+    background-color: #1B6DB6;
+    font-family: 'Cormorant Garamond', georgia, serif;
+}
+
+nav{
+    background-color: #D2B48C;
+}
 nav a {
     color: white;
     text-decoration: none;
+    padding: 35px;
 }
 nav a:hover {
     color: #1B6DB6;
     background-color: #122145;
 }
 
-#background {
-    height: 725px;
-}
-
-body{
-    background-color: white;;
-}
-
-header {
-    background-color: #1B6DB6;
-}
-
-nav{
-    background-color: #D2B48C;
-}
-
 a:hover{
  color: white;
 }
 
-.book{
- background-color: #3DBDE9;
- color: #122145;
- text-decoration: none;
-}
-
-.join{
+.join, .book{
  background-color: #D2B48C;
  color: #122145;
  text-decoration: none;
+ font-size: 18px;
+ padding: 15px 30px;
+ margin-top: 50px;
+ border-radius: 5px;
 }
 
 .book:hover{
  color: white;
+}
+
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+.card-img {
+    border: 10px solid black;
 }
 
 .join:hover{
@@ -59,16 +80,26 @@ a:hover{
 #background{
  background-color: #D2B48C;
 }
+#logo_link {
+    padding-top: 5px;
+}
+#hero-img {
+    width: 100%;
+}
 
 .msg{
  display:block;
  background-color: #3DBDE9;
+ line-height: 1.5em;
+ padding: 35px;
 }
 .msg h2 {
    color: #122145;
 }
 .msg p {
     color: black;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 
 .home-title{
@@ -78,10 +109,15 @@ a:hover{
 h4{
     color: #122145;
 }
+h2 {
+    margin: 0;
+}
 
 footer {
     background-color: #122145;
     color: white;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 footer p {
     font-size: 1.2em;
@@ -94,7 +130,11 @@ footer a:hover {
     color: #3DBDE9;
     text-decoration: underline;
 }
+footer .social img {
+    padding-top: 15px;
+}
 
 .icon {
     width: 80px;
+    padding-top: 10px;
 }
