--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -11,12 +11,29 @@
     margin: 0 auto;
 }
 
-nav, a, #hero-msg, h1, #hero-msg, h4, .button-box, main, section{
+a, #hero-msg, h1, .button-box, main, section{
     text-align: center;
+}
+
+header {
+    background-color: #1B6DB6;
+    font-family: 'Cormorant Garamond', georgia, serif;
+    display: grid;
+    grid-template-columns: 150px 1fr;
+    justify-items: center;
+    align-items: center;
+}
+
+nav {
+    text-align: center;
+    display: flex;
+    justify-content: space-around;
 }
 
 #background {
     height: 725px;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
 body{
@@ -26,18 +43,67 @@ body{
     margin: 0;
     padding: 0;
 }
+
+#hero{ 
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+#hero-msg h4 {
+    color: white
+}
+#hero-msg h1 {
+    color: white;
+}
+
+main { 
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
+.card-img {
+    width: 100%;
+    border: 10px solid #d9c2a3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1,1);
+}
+.mountains {
+    width: 100%;
+}
 main section img {
     box-sizing: border-box;
 }
-
-header {
-    background-color: #1B6DB6;
-    font-family: 'Cormorant Garamond', georgia, serif;
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+.mountains {
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 
-nav{
-    background-color: #D2B48C;
-}
 nav a {
     color: white;
     text-decoration: none;
@@ -82,6 +148,11 @@ a:hover{
 }
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
+.logo {
+    height: 100px;
 }
 #hero-img {
     width: 100%;
@@ -92,6 +163,9 @@ a:hover{
  background-color: #3DBDE9;
  line-height: 1.5em;
  padding: 35px;
+ grid-column: 6/10;
+ grid-row: 6/7;
+ box-shadow: 5px 5px 10px #6f7364;
 }
 .msg h2 {
    color: #122145;
@@ -108,6 +182,7 @@ a:hover{
 
 h4{
     color: #122145;
+    text-align: center;
 }
 h2 {
     margin: 0;
@@ -118,6 +193,9 @@ footer {
     color: white;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 footer p {
     font-size: 1.2em;
@@ -138,3 +216,49 @@ footer .social img {
     width: 80px;
     padding-top: 10px;
 }
+
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    #hero-msg h1 {
+        color: #6f7364;
+    }
+    .home-title {
+        font-size: 25px;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
+       
