--- a/practice/styles/practicestyles.css
+++ b/practice/styles/practicestyles.css
@@ -1,3 +1,10 @@
+h5 {
+  text-align: center;
+}
+
+
+
+/*
 .main-grid { 
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -36,7 +43,7 @@ img {
 
 
 
-/*
+
 main{
   text-align: center;
 }
