--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -155,6 +155,7 @@ a:hover{
 }
 #hero-img {
     width: 100%;
+    height: 800px;
 }
 
 .msg{
@@ -185,6 +186,11 @@ h4{
 }
 h2 {
     margin: 0;
+}
+
+.river-text {
+    height: 200px;
+    overflow: scroll; 
 }
 
 footer {
