--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -157,6 +157,9 @@ a:hover{
     width: 100%;
     height: 800px;
 }
+.contacttext {
+    color: white;
+}
 
 .msg{
  display:block;
@@ -232,6 +235,10 @@ footer .social img {
     }
     nav, footer {
         flex-direction: column;
+        z-index: 1;
+    }
+    #logo-link {
+        z-index: 1;
     }
     nav a {
         display: block;
@@ -248,6 +255,10 @@ footer .social img {
     }
     #hero-msg h1 {
         color: #6f7364;
+    }
+    #hero-img {
+        margin-top: -225px;
+        z-index: -1;
     }
     .home-title {
         font-size: 25px;
