--- a/busd-website/styles/styles.css
+++ b/busd-website/styles/styles.css
@@ -1,2 +1,175 @@
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap');
 
+/*Whole page styling*/
+:root {
+    --primary-color: #0F3D0F;
+    --secondary-color: black ;
+    --accent1-color: #2FBD2F;
+    --accent2-color: #218221;
+  
+    --heading-font: Audiowide;
+    --paragraph-font: "Exo 2", Helvetica, sans-serif;
+  
+    --headline-color-on-white: #0F3D0F;  /* headlines on a white background */ 
+    --headline-color-on-color: white; /* headlines on a colored background */ 
+    --paragraph-color-on-white: black; /* paragraph text on a white background */ 
+    --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
+    --paragraph-background-color: #0f3d0f  ;
+    --nav-link-color: white;
+    --nav-background-color: #218221;
+    --nav-hover-link-color: white;
+    --nav-hover-background-color: #0f3d0f;
+  }
+h1, h2, h3, h4, h5, h6 {
+    font-family: var(--heading-font);
+    color: var(--headline-color-on-white);
+}
+p {
+    font-family: var(--paragraph-font);
+    color: var(--paragraph-color-on-white);
+    padding: 1em;
+}
+
+/*Header/Nav*/
+header {
+    display: grid;
+    grid-template-columns: .5fr 1fr 1fr .5fr;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 100px;
+    background-color: var(--nav-background-color);
+    height: 100%;
+    width: 100%;
+}
+#logo-link, .logo {
+    margin: 0;
+    padding: 0;
+    display: block;
+}
+.logo {
+    height: 150px;
+    width: 150px;
+}
+
+nav {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr auto;
+    grid-column: 2/ span 3;
+    text-align: center;
+    align-items: center;
+    margin-right: 200px;
+    padding: 10px 0;
+    gap: 200px;
+    color: var(--nav-link-color);
+}
+
+.nav-links {
+    grid-column: 2/4;
+    display: flex;
+    justify-content: center;
+    gap: 100px;
+    width: 100%;
+}
+nav a {
+    font-size: 25px;
+    text-decoration: none;
+    background-color: var(--accent2-color);
+    padding: 5px 10px;
+}
+
+nav a:link, nav a:visited {
+    color: var(--nav-link-color);
+}
+
+nav a:hover {
+    color: white;
+    background-color: var(--nav-hover-background-color);
+}
+
+.order-button {
+    background-color: white;
+    color: var(--headline-color-on-white) !important;
+    border-radius: 5px;
+    padding: 5px 8px;
+    grid-column: 4;
+    margin-right: 250px;
+    justify-self: end;
+}
+.order-button:hover {
+    color: white !important;
+}
+
+/*Hero*/
+h1 {
+    text-align: center;
+}
+h2 {
+    text-align: center;
+}
+#hero-img {
+    text-align: center;
+    width: 100%;
+}
+
+/*Body*/
+.main-grid {
+    width: 100%;
+    display: grid;
+    grid-template-columns: .5fr 1fr 1fr .5fr;
+    grid-template-rows: repeat(2, 1fr);
+    gap: 200px;
+    padding-top: 100px;
+    text-align: center;
+    
+}
+#htext1 {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 80px;
+}
+
+#himg1 {
+    grid-column: 3/4;
+    grid-row: 1/2;
+}
+.himg-type {
+    width: 100%;
+    height: 300px;
+}
+
+#htext2 {
+    grid-column: 3/4;
+    grid-row: 2/3;
+    margin-top: 80px;
+}
+#himg2 {
+    grid-column: 2/3;
+    grid-row:2/3;
+}
+.himg-book {
+    width: 100%;
+    height: 325px;
+}
+.img-text {
+    font-size: 15px;
+}
+
+/*Footer*/
+footer {
+    display:grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 50px;
+    width: 80%;
+    margin: 0 auto;
+    justify-items: center;
+    align-items: center;
+}
+
+.social-links {
+    justify-items: center;
+    align-items: center;
+}
+.social-img {
+    height: 100px;
+    width: 100px;
+}
