--- a/busd-website/styles/styles.css
+++ b/busd-website/styles/styles.css
@@ -38,15 +38,22 @@ header {
     gap: 20px;
     margin-bottom: 100px;
     background-color: var(--nav-background-color);
-    height: 100%;
+    padding: 90px 10px;
+    transition: padding 0.3s ease-in-out, height 0.3s ease-in-out;
     width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 99;
 }
 #logo-link, .logo {
     margin: 0;
     padding: 0;
     display: block;
+    transition: 0.4s;
 }
 .logo {
+    transition: height 0.3s ease-in-out, width 0.3s ease-in-out;
     height: 150px;
     width: 150px;
 }
@@ -85,6 +92,9 @@ nav a:hover {
     color: white;
     background-color: var(--nav-hover-background-color);
 }
+nav a.active {
+
+}
 
 .order-button {
     background-color: white;
@@ -100,6 +110,9 @@ nav a:hover {
 }
 
 /*Hero*/
+#hero {
+    padding-top: 180px;
+}
 h1 {
     text-align: center;
 }
@@ -112,6 +125,12 @@ h2 {
 }
 
 /*Body*/
+body {
+    padding-top: 180px;
+    margin: 0;
+    transition: padding-top 0.3s ease-in-out;
+}
+
 .main-grid {
     width: 100%;
     display: grid;
@@ -120,7 +139,7 @@ h2 {
     gap: 200px;
     padding-top: 100px;
     text-align: center;
-    
+    transition: padding-top 0.3s ease-in-out;
 }
 #htext1 {
     grid-column: 2/3;
@@ -172,4 +191,16 @@ footer {
 .social-img {
     height: 100px;
     width: 100px;
+}
+
+@media screen and (max-width: 580px) {
+    header {
+        padding: 20px 10px !important;
+    }
+    .nav-links a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+
 }
