--- a/busd-website/styles/styles.css
+++ b/busd-website/styles/styles.css
@@ -359,6 +359,29 @@ body:not(#home-page) {
     background-color: #45a049;
 }
 
+/*FAQ Styling*/
+.faq-txt {
+    width: 60%;
+    margin: 0 auto;
+}
+
+#fimg1 {
+    float: right;
+    margin-left: 20px;
+    margin-top: -25px;
+    width: 200px;
+}
+.fimg {
+    width: 200px;
+    height:150px;
+}
+#fimg2 {
+    float: right;
+    margin-left: 20px;
+    margin-top: -25px;
+    width: 200px;
+}
+
 /*Footer*/
 footer {
     display:grid;
